# mojo-dezero

./: .gitignore  README.md  deeplearning.ipynb  main.mojo  pyproject.toml  requirements.txt
dezero/: __init__.py  core.py  core_simple.py  cuda.py  dataloaders.py  datasets.py  functions.py  functions_conv.py  layers.py  models.py  optimizers.py  transforms.py  utils.py
modules/: module_main.py
